--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -12,6 +12,7 @@ $color-white: #fff;
 
 //FONT
 $default-font-size: 1.6rem;
+$main-font-style: 'EB Garamond', serif;
 
 // GRID
 $grid-width: 114rem;
