--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -20,5 +20,6 @@
     transform: translate(-50%, -50%); /* center items using translate */
 
     text-align: center; /* <-- Centers Button */
+    font-family: $main-font-style;
   }
 }
