--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -3,11 +3,12 @@ body {
   font-size: 16px;
   line-height: 1.7;
   color: $color-light;
-  font-family: 'EB Garamond', serif;
+  font-family: $main-font-style;
 }
 
 .logo {
   font-size: 3rem;
+  font-family: $main-font-style;
   display: block;
   position: absolute;
   padding: 3px;
@@ -22,9 +23,6 @@ body {
 }
 
 .season {
-  position: absolute;
-  top: 50%;
-  left: 40%;
   color: $color-light;
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
@@ -34,4 +32,5 @@ body {
 .section-heading {
   color: $color-light;
   margin-bottom: 3rem;
+  font-family: $main-font-style;
 }
