--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -126,6 +126,7 @@
             color: inherit;
             text-decoration: none;
             font-size: 5rem;
+            font-family: $main-font-style;
             text-transform: uppercase;
 
             &:hover {
@@ -147,4 +148,5 @@
   letter-spacing: 3px;
   transform: rotate(-90deg);
   font-style: italic;
+  font-family: $main-font-style;
 }
