contact form complete

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -2,7 +2,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: $color-light;
+  color: $color-white;
   font-family: $main-font-style;
 }
 
@@ -23,14 +23,14 @@ body {
 }
 
 .season {
-  color: $color-light;
+  color: $color-white;
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
   line-height: 0.5;
 }
 
 .section-heading {
-  color: $color-light;
+  color: $color-white;
   margin-bottom: 3rem;
   font-family: $main-font-style;
 }
