--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.7;
-  color: #eee;
+  color: #fff;
   font-family: "EB Garamond", serif; }
 
 .logo {
@@ -35,13 +35,13 @@ body {
   display: block; }
 
 .season {
-  color: #eee;
+  color: #fff;
   font-size: 1.5rem;
   letter-spacing: 0.2rem;
   line-height: 0.5; }
 
 .section-heading {
-  color: #eee;
+  color: #fff;
   margin-bottom: 3rem;
   font-family: "EB Garamond", serif; }
 
@@ -58,33 +58,72 @@ body {
   transition: all 0.2s;
   position: relative;
   font-size: 1.6rem;
-  font-family: "EB Garamond", serif; }
+  font-family: "EB Garamond", serif;
+  border: none;
+  cursor: pointer; }
 
 .btn:hover {
   transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4); }
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2); }
   .btn:hover::after {
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0; }
 
-.btn:active {
+.btn:active, .btn:focus {
+  outline: none;
   transform: translateY(-1px);
   /* <-- Active = On-Click State */
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.6); }
+  box-shadow: 0 2.5px 5px rgba(0, 0, 0, 0.4); }
 
-.btn--white {
+.btn__white {
   background-color: #fff;
-  color: #777; }
-  .btn--white::after {
+  backdrop-filter: blur(5px);
+  color: #aaa; }
+  .btn__white::after {
     background-color: #fff; }
 
 .btn__blur {
   background-color: rgba(255, 255, 255, 0.15);
   backdrop-filter: blur(5px);
-  color: #fff;
-  margin-top: 10rem; }
+  color: #fff; }
   .btn__blur::after {
     background-color: rgba(255, 255, 255, 0.15); }
+
+.form {
+  padding: 2rem; }
+  .form__group:not(:last-child) {
+    margin-bottom: 1.5rem; }
+  .form__input {
+    font-size: 1.5rem;
+    font-family: inherit;
+    color: #aaa;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: none;
+    border-bottom: 3px solid transparent;
+    width: 90%;
+    display: block; }
+    .form__input::-webkit-input-placeholder {
+      color: #aaa;
+      font-size: 1.5rem; }
+    .form__input:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+      border-bottom: 3px solid #aaa; }
+    .form__input:focus:invalid {
+      border-bottom: 3px solid #c43a3a; }
+  .form__label {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s; }
+  .form__input:placeholder-shown + .form__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem); }
 
 .header {
   height: 100vh;
@@ -171,7 +210,7 @@ body {
       position: relative;
       width: 100%;
       height: 2px;
-      background-color: #eee;
+      background-color: #fff;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -246,7 +285,9 @@ body {
   letter-spacing: 3px;
   transform: rotate(-90deg);
   font-style: italic;
-  font-family: "EB Garamond", serif; }
+  font-family: "EB Garamond", serif;
+  color: #fff;
+  text-shadow: 3rem 0 1.5rem rgba(0, 0, 0, 0.7); }
 
 .heading-primary {
   margin-bottom: 20rem; }
@@ -259,11 +300,11 @@ body {
     left: 10%; }
   .heading-primary-sub {
     position: absolute;
-    top: 25%;
+    top: 35%;
     left: 40%; }
   .heading-primary > .season {
     position: absolute;
-    top: 50%;
+    top: 65%;
     left: 40%; }
   .heading-primary > .chapter-number {
     position: absolute;
@@ -278,4 +319,17 @@ body {
   padding: 25rem 0 30rem 0; }
 
 .section-contact {
-  padding: 10rem 0 5rem 0; }
+  padding: 20rem 0 20rem 0;
+  background-image: linear-gradient(to right bottom, #ccc, #ccc);
+  text-shadow: 0 0.5rem 3rem rgba(0, 0, 0, 0.1); }
+
+.contact {
+  background-image: linear-gradient(90deg, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url(/img/contact.jpg);
+  background-size: 100%;
+  border-radius: 3px;
+  box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.1);
+  color: #aaa;
+  height: 50rem; }
+  .contact__form {
+    width: 50%;
+    padding: 4rem; }
