--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,11 +11,14 @@
     position: relative;
     font-size: $default-font-size;
     font-family: $main-font-style;
+
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
     transform: translateY(-3px);
-    box-shadow: 0 10px 20px rgba($color-black, 0.4);
+    box-shadow: 0 5px 10px rgba($color-black, 0.2);
 
     &::after {
       transform: scaleX(1.4) scaleY(1.6);
@@ -23,14 +26,17 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-1px); /* <-- Active = On-Click State */
-    box-shadow: 0 5px 10px rgba($color-black, 0.6);
+    box-shadow: 0 2.5px 5px rgba($color-black, 0.4);
   }
 
-  &--white {
+  &__white {
     background-color: $color-white;
-    color: #777;
+    backdrop-filter: blur(5px);
+    color: $color-light-3;
 
     &::after {
       background-color: $color-white;
@@ -41,7 +47,6 @@
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(5px);
     color: $color-white;
-    margin-top: 10rem;
 
     &::after {
       background-color: rgba(255, 255, 255, 0.15);
