--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,2 +1,49 @@
 .form {
+  padding: 2rem;
+
+  &__group:not(:last-child) {
+    margin-bottom: 1.5rem;
+  }
+  &__input {
+    font-size: 1.5rem;
+    font-family: inherit;
+    color: $color-light-3;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba($color-white, 0.8);
+    border: none;
+    border-bottom: 3px solid transparent;
+    width: 90%;
+    display: block;
+
+    &::-webkit-input-placeholder {
+      color: $color-light-3;
+      font-size: 1.5rem;
+    }
+
+    &:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
+      border-bottom: 3px solid $color-light-3;
+    }
+
+    &:focus:invalid {
+      border-bottom: 3px solid rgb(196, 58, 58);
+    }
+  }
+
+  &__label {
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s;
+  }
+
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem);
+  }
 }
