made a few asthetic changes, will add more content later

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -16,3 +16,8 @@ body {
   background-color: $color-dark;
   color: $color-light-2;
 }
+
+::selection {
+  background-color: $color-light-2;
+  color: $color-black;
+}
