--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,10 @@ body {
   background-color: #111;
   color: #ccc; }
 
+::selection {
+  background-color: #ccc;
+  color: #000; }
+
 body {
   font-weight: 400;
   font-size: 16px;
